--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ table{
   border-radius: 5px;
   box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
-.image-circle{
+.img-circle{
   border-radius: 50%;
 }
 .text-center{
@@ -86,11 +86,14 @@ text-align: center;
   background-color: #C61417;
   color: white;
 }
+.list-style{
+  list-style: none;
+}
 
 /* Specific CSS rules */
 
 #img-profile{
-  width: 100px;
-  height: 100px;
+  width: 400px;
+  height: 400px;
   border: 3px solid #000080;
 }
